[gd_scene load_steps=11 format=3 uid="uid://drum5qwm8irdp"]

[ext_resource type="Texture2D" uid="uid://b2ib2644tvecr" path="res://elevatorgenarator.png" id="1_i4vk5"]
[ext_resource type="Script" uid="uid://bbqtuxkgp410k" path="res://object/elevatorgenarator.gd" id="1_jg4u5"]
[ext_resource type="AudioStream" uid="uid://c5j5d6w2vqpcn" path="res://sound/temp/sound/Retro Event UI StereoUP 01.wav" id="3_ap5se"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jg4u5"]
atlas = ExtResource("1_i4vk5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a6jr"]
atlas = ExtResource("1_i4vk5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70kcp"]
atlas = ExtResource("1_i4vk5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfj0f"]
atlas = ExtResource("1_i4vk5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_eo80r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg4u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a6jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70kcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfj0f")
}],
"loop": false,
"name": &"chargeup",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5p784"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_4a6jr"]
radius = 24.0

[node name="elevatorgenarator" type="StaticBody2D"]
script = ExtResource("1_jg4u5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_eo80r")
animation = &"chargeup"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5p784")

[node name="triggerArea" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggerArea"]
shape = SubResource("CircleShape2D_4a6jr")

[node name="chargeUPSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ap5se")

[connection signal="area_entered" from="triggerArea" to="." method="_on_trigger_area_area_entered"]
[connection signal="body_entered" from="triggerArea" to="." method="_on_trigger_area_body_entered"]
